# hikaru_openstudio

./: .gitignore  Cargo.toml  README.md  build_log_recuperado.txt  build_log_v2.txt  build_log_v3.txt  build_log_v4.txt  build_log_v5.txt  build_log_v6.txt  config_patch.py  fix_compiler_errors.py  fix_view.rs
assets/: hikaru_OpenStudio_logo.jpg~
generic_daw_core/: Cargo.toml
generic_daw_core/src/: channel.rs  lib.rs  node.rs  recording.rs  sample.rs  stream.rs  track.rs
generic_daw_gui/: Cargo.toml  build.rs
generic_daw_gui/src/: clap_host.rs  config.rs  config_view.rs  daw.rs  get_plugins_hybrid.rs  host_bridge.rs  lods.rs  main.rs
generic_daw_gui/src/arrangement_view/: arrangement.rs  plugin.rs  sample.rs
vst_host/: Cargo.toml  LICENSE
vst_host/examples/: scan_plugin.rs
vst_host/src/: audio_thread.rs  component_handler.rs  error.rs  factory.rs  host_application.rs  lib.rs  module.rs  plugin.rs  plugin_descriptor.rs  scan.rs  shared.rs
