[package]
name = "generic_daw_core"
version = "0.0.0"
edition = "2024"

[dependencies]
# Dependencias externas
uuid = { version = "1.24", features = ["v4"] }
symphonia = "0.5"
oneshot = "0.1"
hound = "3.5"
midly = "0.5"
cpal = "0.15"
log = "0.4"
rtrb = "0.3" 

# Dependencias locales (las que no encontraba)
vst3_host = { path = "../vst_host" }
audio_graph = { path = "../audio_graph" }
clap_host = { path = "../clap_host" }
dsp = { path = "../dsp" }
utils = { path = "../utils" }
thread_pool = { path = "../thread_pool" }